--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,6 @@
+/* src/index.css */
+@import "tailwindcss";
+
 /* =======================
    Global Styles & Reset
    ======================= */
@@ -25,17 +28,21 @@ body,
 html {
   margin: 0;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   /* Hapus centering global, gunakan di komponen React jika diperlukan */
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #ffffff;
   text-decoration: none;
   transition: color 0.2s ease;
 }
 a:hover {
-  color: #535bf2;
+  color: #000000;
 }
 
 /* ======================
