--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,6 +45,15 @@ a:hover {
   color: #000000;
 }
 
+#root{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 /* ======================
    Typography & Elements
    ====================== */
