--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --font-base: 'Poppins', sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -32,17 +33,14 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: var(--font-base);
   /* Hapus centering global, gunakan di komponen React jika diperlukan */
 }
 
 a {
   font-weight: 500;
-  color: #ffffff;
   text-decoration: none;
   transition: color 0.2s ease;
-}
-a:hover {
-  color: #000000;
 }
 
 #root{
