--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -1081,6 +1081,34 @@
     grid-row-start: 1;
     min-width: calc(0.25rem * 0);
   }
+  .divider {
+    display: flex;
+    height: calc(0.25rem * 4);
+    flex-direction: row;
+    align-items: center;
+    align-self: stretch;
+    white-space: nowrap;
+    margin: var(--divider-m, 1rem 0);
+    --divider-color: var(--color-base-content);
+    @supports (color: color-mix(in lab, red, red)) {
+      --divider-color: color-mix(in oklab, var(--color-base-content) 10%, transparent);
+    }
+    &:before, &:after {
+      content: "";
+      height: calc(0.25rem * 0.5);
+      width: 100%;
+      flex-grow: 1;
+      background-color: var(--divider-color);
+    }
+    @media print {
+      &:before, &:after {
+        border: 0.5px solid;
+      }
+    }
+    &:not(:empty) {
+      gap: calc(0.25rem * 4);
+    }
+  }
   .filter {
     display: flex;
     flex-wrap: wrap;
@@ -1359,6 +1387,16 @@
   }
   .bg-white {
     background-color: var(--color-white);
+  }
+  .divider-neutral {
+    &:before, &:after {
+      background-color: var(--color-neutral);
+    }
+  }
+  .divider-primary {
+    &:before, &:after {
+      background-color: var(--color-primary);
+    }
   }
   .bg-gradient-to-r {
     --tw-gradient-position: to right in oklab;
